--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Page Title</title>
+    <title>งานโหดๆ</title>
+    <style>
+   
+    </style>
 </head>
 <body>
-    <h1>ปรมินทร์ บุญชูสวัสดิ์ </h1> <hr>
-    <img src="1.jpg" alt="filmred"width="100" height="100">
-   <a href="http://www.google.com" target="_blank"> <img src="1.jpg" alt="filmred"width="100" height="100" ></a>
-    <div style="background-color:lightgoldenrodyellow ; color:firebrick" >
-<pre>
-    สมการ x<sup>2</sup>-y<sup>2</sup>(x+y)(x-y)
-    ควรจะ<b>ต้องจำ</b>ไว้
-</pre>
-    </div>
-
-    <p><ins>ความรู้ที่จำเป็นในการเขียนเว็บ</ins></p>
-    <ui>
-        <li> ภาษา <i>HTML</i></li>
-        <li>ภาษา <i>PHP</i></li>
-        <li>ระบบฐานข้อมูล</li>
-        <li>เว็บ <a href=" http://www.w3schools.com " target="_blank">w3school</a> </li>
-    </ui>
+    <h1 style="text-align: center;"> Webboard God God  </h1> 
+    <hr> 
+    หมวดหมู่ : 
+    <select name="category">
+      <option value="all">--ทั้งหมด--</option>
+        <option value="general">เรื่องทั่วไป</option>
+        <option value="study">เรื่องเรียน</option>
+    </select>
+    <a href="login.html" style="float: right;">เข้าสู่ระบบ</a>
+    <ul>
+        <li><a href="#" >กระทู้ที่1</a></li>
+        <li><a href="#" >กระทู้ที่2</a></li>
+        <li><a href="#" >กระทู้ที่3</a></li>
+        <li><a href="#" >กระทู้ที่4</a></li>
+        <li><a href="#" >กระทู้ที่5</a></li>
+    </ul>
 </body>
 </html>
