--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
 <tr><td></td><td><input type="radio" name="man" value="M">ชาย</td></tr>
 <tr><td>เพศ :</td><td><input type="radio" name="woman" value="F">หญิง</td></tr>
 <tr><td></td><td><input type="radio" name="mw" value="MW">อื่นๆ  </td></tr>
-<tr><td>อีเมล :</td><td><input type="text" size="30"></td></tr>
+<tr><td>อีเมล :</td><td><input type="email" size="30"></td></tr>
 <tr><td colspan="2" align="center"><input type="submit" value="สมัครสมาชิก"></td></tr>
 <tr></tr>
 <tr></tr>
