--- a/Login.html
+++ b/Login.html
@@ -12,12 +12,14 @@
 <body>
     <h1 style="text-align: center;"> Webboard God God  </h1> 
     <hr> 
+    <form action="verify.php" method="post" >
     <table style="border: 2px solid black; width:40%" align="center">
 <tr><td colspan="2" style="background-color: #6CD2FE;" >เข้าสู่ระบบ</td></tr>
 <tr><td>Login</td><td><input type="text" name="login" size="40"></td></tr>
 <tr><td>Password</td><td><input type="password" name="pwd" size="40"></td></tr>
 <tr><td colspan="2" align="center"><input type="submit" value="Login"></td></tr>
     </table>
+</form>
     <br>
     <div align="center">
          ถ้ายังไม่ได้เป็นสมาชิก <a href="register.html"> กรุณาสมัครสมาชิก</a> 
